--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,20 +1,25 @@
 @import "tailwindcss";
 
 .antiga {
-    font-family: "Cinzel Decorative", serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
-  .antiga-bold {
-    font-family: "Cinzel Decorative", serif;
-    font-weight: 700;
-    font-style: normal;
-  }
-  
-  .antiga-black {
-    font-family: "Cinzel Decorative", serif;
-    font-weight: 900;
-    font-style: normal;
-  }
-  
+  font-family: "Cinzel Decorative", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.antiga-bold {
+  font-family: "Cinzel Decorative", serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.antiga-black {
+  font-family: "Cinzel Decorative", serif;
+  font-weight: 900;
+  font-style: normal;
+}
+
+.router-link-active span:first-child span:first-child,
+.router-link-active span:nth-child(2),
+.router-link-active span:nth-child(3) {
+  width: 100%;
+}
